# mr-stats-haskell-servant

./: .gitignore  LICENSE  README.md  mrstats.cabal  run.sh
src/: Main.hs  MergeRequestComments.hs  MergeRequestStats.hs  MergeRequests.hs  PagedResponse.hs  Tools.hs
