name:                mrstats
version:             0.1.0.0
synopsis:            Merge Request Data Analyzer
description:         The application downloads data from Gitlab and serves statistics as web service.
homepage:            https://github.com/miciek/mrstats
license:             MIT
license-file:        LICENSE
author:              miciek
maintainer:          miciek@gmail.com
copyright:           2016, miciek
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

executable mrstats
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , aeson >= 0.8
                     , attoparsec
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , directory
                     , either
                     , http-media
                     , http-link-header
                     , http-types
                     , js-jquery
                     , lucid
                     , mtl
                     , random
                     , servant
                     , servant-client
                     , servant-docs
                     , servant-server
                     , stm
                     , string-conversions
                     , text
                     , time
                     , iso8601-time
                     , transformers
                     , transformers-compat
                     , utf8-string
                     , wai
                     , warp
